Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63411

Fatal Wayland error when toggling window visible property

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.9.6, 5.11.0 Beta 3
    • 5.9.1, 5.9.4, 5.11.0 Beta 1
    • QPA: Wayland
    • None
    • Ubuntu 16.04

      Wayland client terminates with "The Wayland connection experienced a fatal error (Invalid argument)" when the window visible property is changed from visible to invisible and back to visible again within one slot.

      The issue can be reproduced for instance by running the minimal-qml compositor example and the attached QML file with qmlscene as a Wayland client (-platform wayland).

        1. main.qml
          0.6 kB
          Bernd Weimer
        2. qtbug-63411-wayland-debug.log
          20 kB
          Johan Helsing
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            johanhelsing Johan Helsing
            bweimer Bernd Weimer
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes