Fix crash when calling setVisible for EGL windows twice within one slot

The cherry-picked version doesn't include the tests from the original patch.

Task-number: QTBUG-63411
Change-Id: I56c367a1801d215e93bf195332272cfee300cdd8
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>
(cherry picked from commit 6bd1d22475a10e84f2bcc1eaa25bd7fb259e761b)
Reviewed-by: David Edmundson <davidedmundson@kde.org>